--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,40 @@
         android:background="@drawable/button_state"
         android:textColor="#016fa2"
         android:textSize="20dp" />
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:background="#cbddf5"
+        android:id="@+id/tuitionSetFilterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="#1263ce"
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:text=""/>
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:background="#cbddf5"
+        android:id="@+id/incomeSetFilterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="#1263ce"
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:text = ""/>
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:background="#cbddf5"
+        android:id="@+id/regionSetFilterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="#1263ce"
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:text = ""/>
 </LinearLayout>
