--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -28,9 +28,11 @@
             android:layout_height="25dp"
             android:orientation="horizontal">
             <CheckBox
+                android:id="@+id/tuitionInCk"
                 android:layout_width="30dp"
                 android:layout_height="20dp"/>
             <TextView
+                android:id="@+id/tuitionInTxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="등록금 내"
@@ -44,9 +46,11 @@
             android:layout_height="25dp"
             android:orientation="horizontal">
             <CheckBox
+                android:id="@+id/tuitionOutCK"
                 android:layout_width="30dp"
                 android:layout_height="20dp"/>
             <TextView
+                android:id="@+id/tuitionOutTxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="등록금 외"
@@ -60,9 +64,11 @@
             android:layout_height="25dp"
             android:orientation="horizontal">
             <CheckBox
+                android:id="@+id/tuitionInandOutCk"
                 android:layout_width="30dp"
                 android:layout_height="20dp"/>
             <TextView
+                android:id="@+id/tuitionInandOutTxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="등록금 내 + 등록금 외"
@@ -77,9 +83,9 @@
             android:orientation="horizontal">
 
             <CheckBox
+                android:id="@+id/incomeCk"
                 android:layout_width="30dp"
-                android:layout_height="20dp"
-                android:checked="false"/>
+                android:layout_height="20dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -107,6 +113,7 @@
             android:layout_height="25dp"
             android:orientation="horizontal">
             <CheckBox
+                android:id="@+id/regionCk"
                 android:layout_width="30dp"
                 android:layout_height="20dp"/>
             <TextView
@@ -140,6 +147,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/allCkBoxBT"
                 android:layout_width="63dp"
                 android:layout_height="wrap_content"
                 android:background="#b2ddff"
@@ -147,6 +155,7 @@
                 android:textColor="#016fa2" />
 
             <Button
+                android:id="@+id/cancelBT"
                 android:layout_width="116dp"
                 android:layout_height="wrap_content"
                 android:background="#b2ddff"
@@ -154,6 +163,7 @@
                 android:textColor="#016fa2" />
 
             <Button
+                android:id="@+id/setFilteringBT"
                 android:layout_width="122dp"
                 android:layout_height="wrap_content"
                 android:background="#b2ddff"
