--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -1,175 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#e6f4f2"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:background="#e6f4f2">
+    android:orientation="vertical">
+
+    <!-- Title Bar -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#4B89DC"
+        android:textColor="#203a5e"
+        android:text="검색 조건 선택"
+        android:textSize="30dp"
+        android:layout_gravity="center_vertical"
+        android:textAlignment="center"/>
+
+    <!-- 등록금 내 CK -->
     <LinearLayout
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical">
-
-        <!-- Title Bar -->
+        android:layout_height="25dp"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/tuitionInCk"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
         <TextView
+            android:id="@+id/tuitionInTxt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4B89DC"
-            android:textColor="#203a5e"
-            android:text="검색 조건 선택"
-            android:textSize="30dp"
-            android:layout_gravity="center_vertical"
-            android:textAlignment="center"/>
-
-        <!-- 등록금 내 CK -->
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/tuitionInCk"
-                android:layout_width="30dp"
-                android:layout_height="20dp"/>
-            <TextView
-                android:id="@+id/tuitionInTxt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="등록금 내"
-                android:textSize="20dp"/>
-        </LinearLayout>
-
-        <!-- 등록금 외 CK -->
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/tuitionOutCK"
-                android:layout_width="30dp"
-                android:layout_height="20dp"/>
-            <TextView
-                android:id="@+id/tuitionOutTxt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="등록금 외"
-                android:textSize="20dp"/>
-        </LinearLayout>
-
-        <!-- 등록금 내 + 외 CK -->
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/tuitionInandOutCk"
-                android:layout_width="30dp"
-                android:layout_height="20dp"/>
-            <TextView
-                android:id="@+id/tuitionInandOutTxt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="등록금 내 + 등록금 외"
-                android:textSize="20dp"/>
-        </LinearLayout>
-
-        <!-- 소득분위 -->
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/incomeCk"
-                android:layout_width="30dp"
-                android:layout_height="20dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="20dp"
-                android:layout_marginRight="8dp"
-                android:text="소득분위"/>
-            <TextView
-                android:id="@+id/incomeTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:textColor="#1263ce"
-                android:text="선택안함"/>
-        </LinearLayout>
-        <Spinner
-            android:id="@+id/incomeSpin"
-            android:entries="@array/incomeArray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <!-- 지역 선택 -->
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/regionCk"
-                android:layout_width="30dp"
-                android:layout_height="20dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="지역"
-                android:layout_marginRight="8dp"
-                android:textSize="20dp"/>
-            <TextView
-                android:id="@+id/regionTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:textColor="#1263ce"
-                android:text="전체"/>
-        </LinearLayout>
-        <Spinner
-            android:id="@+id/regionSpin"
-            android:entries="@array/regionArray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <!-- 전체선택, 취소, 검색필터 설정 버튼-->
-        <!-- 전체선택 : 조건에 해당하는 모든 필터 선택, ~> 만약 조건을 선택하지 않으면 필터링 되지 않으므로 DB에 있는 모든 장학금이 선택 (조건이 없는 장학금까지)
-        취소 : 이전에 선택되어있던 조건들 혹은 아무 조건 없음
-        검색필터 설정 : 필터링 할 조건을 설정-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/allCkBoxBT"
-                android:layout_width="63dp"
-                android:layout_height="wrap_content"
-                android:background="#b2ddff"
-                android:text="전체선택"
-                android:textColor="#016fa2" />
-
-            <Button
-                android:id="@+id/cancelBT"
-                android:layout_width="116dp"
-                android:layout_height="wrap_content"
-                android:background="#b2ddff"
-                android:text="취소"
-                android:textColor="#016fa2" />
-
-            <Button
-                android:id="@+id/setFilteringBT"
-                android:layout_width="122dp"
-                android:layout_height="wrap_content"
-                android:background="#b2ddff"
-                android:text="검색 조건 선택하기"
-                android:textColor="#016fa2" />
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:text="등록금 내"
+            android:textSize="20dp"/>
     </LinearLayout>
-</ScrollView>
+
+    <!-- 등록금 외 CK -->
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/tuitionOutCK"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:id="@+id/tuitionOutTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="등록금 외"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+    <!-- 등록금 내 + 외 CK -->
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/tuitionInandOutCk"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:id="@+id/tuitionInandOutTxt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="등록금 내 + 등록금 외"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+    <!-- 소득분위 -->
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/incomeCk"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+            android:layout_marginRight="8dp"
+            android:text="소득분위"/>
+        <TextView
+            android:id="@+id/incomeTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textColor="#1263ce"
+            android:text="선택안함"/>
+    </LinearLayout>
+    <Spinner
+        android:id="@+id/incomeSpin"
+        android:entries="@array/incomeArray"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!-- 지역 선택 -->
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/regionCk"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="지역"
+            android:layout_marginRight="8dp"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/regionTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textColor="#1263ce"
+            android:text="전체"/>
+    </LinearLayout>
+    <Spinner
+        android:id="@+id/regionSpin"
+        android:entries="@array/regionArray"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!-- 기간설정 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/spanCk"
+            android:layout_width="30dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="기간"
+            android:layout_marginRight="8dp"
+            android:textSize="20dp"/>
+
+        <EditText
+            android:id="@+id/startDate"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="ex) 2020-10-15 "
+            android:textColor="#CDCECF"
+            android:textSize="12dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text=" ~ "
+            android:textSize="20dp"/>
+
+        <EditText
+            android:id="@+id/tillDate"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="ex) 2020-11-15"
+            android:textColor="#CDCECF"
+            android:textSize="12dp" />
+    </LinearLayout>
+
+    <!-- 전체선택, 취소, 검색필터 설정 버튼-->
+    <!-- 전체선택 : 조건에 해당하는 모든 필터 선택, ~> 만약 조건을 선택하지 않으면 필터링 되지 않으므로 DB에 있는 모든 장학금이 선택 (조건이 없는 장학금까지)
+    취소 : 이전에 선택되어있던 조건들 혹은 아무 조건 없음
+    검색필터 설정 : 필터링 할 조건을 설정-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/allCkBoxBT"
+            android:layout_width="63dp"
+            android:layout_height="wrap_content"
+            android:background="#b2ddff"
+            android:text="전체선택"
+            android:textColor="#016fa2" />
+
+        <Button
+            android:id="@+id/cancelBT"
+            android:layout_width="116dp"
+            android:layout_height="wrap_content"
+            android:background="#b2ddff"
+            android:text="취소"
+            android:textColor="#016fa2" />
+
+        <Button
+            android:id="@+id/setFilteringBT"
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:background="#b2ddff"
+            android:text="검색 조건 선택하기"
+            android:textColor="#016fa2" />
+    </LinearLayout>
+</LinearLayout>
