--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    
+
+    <!-- Title을 없애기 위해 추가함 -->
     <style name="Theme.MyDialog" parent = "Theme.AppCompat.Light.Dialog">
         <item name="windowActionBar"> false</item>
         <item name="windowNoTitle"> true</item>
