--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -67,7 +67,7 @@
             android:id="@+id/tuitionInandOutTxt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="등록금 내 + 등록금 외"
+            android:text="등록금 내 + 외"
             android:textSize="20dp"/>
     </LinearLayout>
 
