--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -185,7 +185,7 @@
         <Button
             android:id="@+id/allCkBoxBT"
             android:layout_width="63dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="#b2ddff"
             android:text="전체선택"
             android:textColor="#016fa2" />
@@ -193,7 +193,7 @@
         <Button
             android:id="@+id/cancelBT"
             android:layout_width="116dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="#b2ddff"
             android:text="취소"
             android:textColor="#016fa2" />
@@ -201,7 +201,7 @@
         <Button
             android:id="@+id/setFilteringBT"
             android:layout_width="122dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="#b2ddff"
             android:text="검색 조건 선택하기"
             android:textColor="#016fa2" />
