--- a/app/src/main/res/drawable/button_state.xml
+++ b/app/src/main/res/drawable/button_state.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- 버튼을 둥글게 만들기 위하여 button의 state를 설정함 -->
+    <!-- 버튼을 둥글게 만들기 위하여 button의 state를 설정함 _ 이연주 -->
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
             <solid android:color="#b2ddef" />
@@ -9,7 +9,7 @@
                 android:color="#ffffff" />
         </shape>
     </item>
-    <!-- 버튼을 클릭하였을때 버튼 변화 -->
+    <!-- 버튼을 클릭하였을때 버튼 변화 _ 이연주 -->
     <item android:state_focused="false" android:state_pressed="true">
         <shape>
             <solid android:color="#b2ddff" />
