--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--리스트뷰 아이템_이소영-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scholar"
     android:layout_width="match_parent"
@@ -7,6 +8,7 @@
     android:padding="10dp"
     android:background="@drawable/listview_item">
 
+    <!--타이틀 표시-->
     <TextView
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
@@ -26,6 +28,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!--등록금 내, 외 정보 표시-->
         <TextView
             android:id="@+id/tuitionFeeView"
             android:layout_width="match_parent"
@@ -37,6 +40,7 @@
             android:textColor="#016fa2"
             android:textSize="18sp" />
 
+        <!--소득 분위 정보 표시-->
         <TextView
             android:id="@+id/incomeView"
             android:layout_width="match_parent"
@@ -48,6 +52,7 @@
             android:textColor="#016fa2"
             android:textSize="18sp" />
 
+        <!--지역 정보 표시-->
         <TextView
             android:id="@+id/regionView"
             android:layout_width="match_parent"
@@ -59,13 +64,14 @@
             android:textColor="#016fa2"
             android:textSize="18sp" />
 
+        <!--기간 정보 표시-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/startView"
+                android:id="@+id/spanView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
@@ -74,18 +80,7 @@
                 android:paddingRight="10dp"
                 android:textColor="#016fa2"
                 android:textSize="18sp" />
-            <TextView
-                android:id="@+id/endView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColor="#016fa2"
-                android:textSize="18sp" />
+
         </LinearLayout>
-
-
     </LinearLayout>
 </LinearLayout>
